# wsi-deid

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
paper/: paper.bib  paper.md
src/wsi_deid/: __init__.py  cli.py  export.py  pseudonym.py  redaction.py
tests/: test_export_metadata.py  test_redaction.py
tools/: wsi_deid_batch_export.ipynb  wsi_deid_export.py  wsi_deid_prototype.ipynb
