[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-deid"
version = "0.1.0"
description = "Whole-slide image de-identification and pseudonymisation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dr. Shamsuz Zaman" }
]
keywords = [
  "whole slide image",
  "digital pathology",
  "de-identification",
  "pseudonymisation",
  "NDPI",
  "OME-TIFF"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
  "imagecodecs",
  "numpy",
  "opencv-python",
  "openslide-bin; platform_system == 'Windows'",
  "openslide-python",
  "pillow",
  "tifffile"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[project.scripts]
wsi-deid = "wsi_deid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
